--- a/form/src/main/resources/templates/form/addForm.html
+++ b/form/src/main/resources/templates/form/addForm.html
@@ -8,6 +8,8 @@
         .container {
             max-width: 560px;
         }
+
+
     </style>
 </head>
 <body>
@@ -23,18 +25,29 @@
             <label for="itemName">상품명</label>
             <!-- th:field = "$*{객체의 프로퍼티}" 객체의 프로퍼티를 읽어 자동으로 변수 식 선언 가능    -->
             <!-- th:field == id, name 을 둘 다 처리한다.    -->
-            <input type="text" id="itemName" th:field ="*{itemName}" class="form-control" placeholder="이름을 입력하세요">
+            <input type="text" id="itemName" th:field="*{itemName}" class="form-control" placeholder="이름을 입력하세요">
         </div>
         <div>
             <label for="price">가격</label>
-            <input type="text" id="price" th:field ="*{price}" class="form-control" placeholder="가격을 입력하세요">
+            <input type="text" id="price" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요">
         </div>
         <div>
             <label for="quantity">수량</label>
-            <input type="text" id="quantity"  th:field ="*{quantity}" class="form-control" placeholder="수량을 입력하세요">
+            <input type="text" id="quantity" th:field="*{quantity}" class="form-control" placeholder="수량을 입력하세요">
         </div>
 
         <hr class="my-4">
+
+        <!-- single checkbox -->
+        <div>판매 여부</div>
+        <div>
+            <div class="form-check">
+                <!--<input type="hidden" name="_open" value="on"/> &lt;!&ndash; 히든 필드 추가 &ndash;&gt;-->
+                <input type="checkbox" id="open" th:field="*{open}" class="form-check-input">
+                <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
+
 
         <div class="row">
             <div class="col">
@@ -44,9 +57,13 @@
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
                         th:onclick="|location.href='@{/form/items}'|"
-                        type="button">취소</button>
+                        type="button">취소
+                </button>
             </div>
+
+
         </div>
+
 
     </form>
 
