--- a/form/src/main/resources/templates/form/editForm.html
+++ b/form/src/main/resources/templates/form/editForm.html
@@ -50,6 +50,18 @@
             </div>
         </div>
 
+        <!-- multi checkbox -->
+        <div>
+            <div>등록 지역</div>
+            <div th:each="region : ${regions}" class="form-check form-check-inline">
+                <!-- 밑에  설정한 regions 는 Item 객체에 대한 regions 값이다.-->
+                <input type="checkbox" th:field="*{regions}" th:value="${region.key}" class="form-check-input">
+                <label th:for="${#ids.prev('regions')}" th:text="${region.value}" class="form-check-label">
+                    서울
+                </label>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
