--- a/form/src/main/resources/templates/form/editForm.html
+++ b/form/src/main/resources/templates/form/editForm.html
@@ -10,6 +10,7 @@
         }
 
 
+
     </style>
 </head>
 <body>
@@ -61,6 +62,19 @@
                 </label>
             </div>
         </div>
+
+        <!-- radio button -->
+        <div>
+            <div>상품 종류</div>
+            <!-- <div th:each="type : ${T(hello.itemservice.domain.item.ItemType).values()}">-->
+            <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
+                <input type="radio" th:field="*{itemType}" th:value="${type.name()}" class="form-check-input">
+                <label th:for="${#ids.prev('itemType')}" th:text="${type.description}" class="form-check-label">
+                    BOOK
+                </label>
+            </div>
+        </div>
+
 
         <div class="row">
             <div class="col">
